# gkom-dzwig-kratownicowy

./: .gitignore  CMakeLists.txt  Configure.h.in  README.md  main.cpp
cmake/modules/: FindGLFW3.cmake  FindGLM.cmake
cmake/scripts/: includeProjectFiles.cmake  includeResources.cmake  loadProjectFiles.cmake  setupLibraries.cmake  setup_libraries.cmake
external-libraries/: setup_libraries.cmake
external-libraries/include/glad/: glad.h
external-libraries/lib/: glfw3.lib
external-libraries/src/: glad.c  prepare_stb.cpp
include/: Camera.h  Collection.h  Compound.h  Core.h  Cuboid.h  Cylinder.h  IObject.h  LightHandler.h  LightSource.h  Material.h  Model.h  Object.h  OldCompound.h  OldModel.h  OldObject.h  PhongMaterial.h  Scene.h  Shader.h  Shadows.h  SkyBox.h  TexturesHandler.h  Transform.h  Window.h
shaders/: flat.fs.glsl  flat.vs.glsl  light_source.fs.glsl  light_source.vs.glsl  phong_model.fs.glsl  phong_model.vs.glsl  texture.fs.glsl  texture.vs.glsl
src/: Camera.cpp  Collection.cpp  Compound.cpp  Core.cpp  Cuboid.cpp  Cylinder.cpp  LightHandler.cpp  LightSource.cpp  Model.cpp  Object.cpp  OldCompound.cpp  OldObject.cpp  PhongMaterial.cpp  Scene.cpp  Shader.cpp  SkyBox.cpp  TexturesHandler.cpp  Window.cpp
tests/: CMakeLists.txt
tests/external-libraries/: CMakeLists.txt  test_glm.cpp
tests/testing-functionality/: CMakeLists.txt  display_cylinder.cpp  display_objects.cpp
tests/unit-tests/: CMakeLists.txt  test_shader.cpp
